--- a/eager-w.html
+++ b/eager-w.html
@@ -8,15 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+ <header>
         <div class="logo-container">
             <img src="./img/logo.svg" alt="logo">
-            <h4 class="logo">Eager</h4>
+            <h3 class="logo">Eager</h3>
         </div>
         <nav>
             <ul class="nav-links">
                 <li class="nav-link"><a  href="#"></a>Home</li>
-                <li class="nav-link"><a  href="#"></a>Blog</li>
+                <li class="nav-link"><a  href="./eager-w-blog.html">Blog</a></li>
                 <li class="nav-link"><a  href="#"></a>About</li>
                 <li class="nav-link"><a  href="#"></a>Contact</li>
             </ul>
@@ -24,7 +24,13 @@
         <div class="cart">
             <img src="./img/cart.svg" alt="">
         </div>
+        <div class="burger">
+            <div class="line1"></div>   
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </header>
+   
     <main>
         <div class="intro">
             <div class="intro-text">
@@ -60,5 +66,7 @@
     <footer>
         <h4>This is a mock website by Eanna Geraghty &copy;</h4>
     </footer>
+<script src="eager.js"></script>
+
 </body>
 </html>
